# lklog

./: .gitignore  CMakeLists.txt  README.md  main.cpp
example/: CMakeLists.txt
example/console_callback/: CMakeLists.txt  main.cpp
example/custom_logger_format/: CMakeLists.txt  main.cpp
example/log_to_console/: CMakeLists.txt  main.cpp
example/log_to_file/: CMakeLists.txt  main.cpp
logger/: appender.cpp  appender.h  baseDecorator.h  consoleAppender.cpp  consoleAppender.h  contentDecorator.h  dateDecorator.cpp  dateDecorator.h  decorator.cpp  decorator.h  eventCapturer.cpp  eventCapturer.h  fileAppender.cpp  fileAppender.h  formator.cpp  formator.h  funcDecorator.cpp  levelDecorator.cpp  levelDecorator.h  lineDecorator.cpp  logger.cpp  logger.h  packer.cpp  packer.h  tidDecorator.h
logger/include/: dateDecorator.h  eventCapturer.h  fileAppender.h
logger/source/: baseDecorator.cpp  dateDecorator.cpp  fileAppender.cpp  filepathDecorator.cpp  tidDecorator.cpp
src/include/: Appender.h  ConsoleAppender.h  EventCapturer.h  FileAppender.h  appender.h  baseDecorator.h  consoleAppender.h  contentDecorator.h  dateDecorator.h  decorator.h  eventCapturer.h  fileAppender.h  filepathDecorator.h  formator.h  funcDecorator.h  levelDecorator.h  lineDecorator.h  logger.h  packer.h  tidDecorator.h  tools.h
src/include/decorator/: BaseDecorator.h  ContentDecorator.h  DateDecorator.h  Decorator.h  FilepathDecorator.h  FuncDecorator.h  LevelDecorator.h  LineDecorator.h  TagDecorator.h  TidDecorator.h
src/source/: Appender.cpp  BaseDecorator.cpp  ConsoleAppender.cpp  ContentDecorator.cpp  DateDecorator.cpp  Decorator.cpp  EventCapturer.cpp  FileAppender.cpp  FilepathDecorator.cpp  FuncDecorator.cpp  LevelDecorator.cpp  LineDecorator.cpp  TagDecorator.cpp  TidDecorator.cpp  contentDecorator.cpp  formator.cpp  logger.cpp  packer.cpp  tidDecorator.cpp
test/basic_usage/: main.cpp
